-
Bug
-
Resolution: Done
-
P2: Important
-
4.7.0
-
None
-
Mac OS X 10.6.3, qt-creator-mac-opensource-2.0.0-beta1
Using qml within Qt Creator's package.
-
43db14d83279566cdd5626321251efc5da8acc1d
TextInput Element without width doesn't handle Input Method correctly especially pre-edit text.
- Width of TextInput doesn't change when pre-edit is changed.
- Pre-edit string is drawn over the tailer strings.
- Pre-edit string isn't drawn if I try to append it.
The attached file is the QML for check it.
The upper TextInput doesn't have width. Lower one has it.
Lower one works well with Input Method.
But upper one doesn't show pre-edit string correctly.