Correctly resize TextInput in the presence of preedit text.

Task-number: QTBUG-10466
Reviewed-by: alexis